Removido código sem uso

--- a/Index.html
+++ b/Index.html
@@ -13,8 +13,7 @@
         </div>
         <section class="flex-container-2">
             <img id="forca" src="img/forca.jpg" alt="Forca">
-            <div id="palavra" class="flex-container-2-2">
-            </div>
+            <div id="palavra" class="flex-container-2-2"></div>
             <div id="novo"></div>
         </section>
         <section id="letras" class="flex-container-3" >
